# revit-model-overview

./: .replit  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
uploads/: 1B22  ELECTRICAL FIXTURE.csv  1B22  LIGHTING DEVICE.csv  1B22  LIGHTING FIXTURE.csv  1B22  WIRE CIRCUIT LENGTH.csv  1B24  ALT  ELECTRICAL FIXTURE.csv  1B24  ALT  LIGHTING DEVICE.csv  1B24  ALT  LIGHTING FIXTURE.csv  1B24  ALT  WIRE CIRCUIT LENGTH.csv  1B24  ELECTRICAL FIXTURE.csv  1B24  LIGHTING DEVICE.csv  1B24  LIGHTING FIXTURE.csv  1B24  WIRE CIRCUIT LENGTH.csv  2B31  ELECTRICAL FIXTURE.csv  2B31  LIGHTING DEVICE.csv  2B31  LIGHTING FIXTURE.csv  2B31  WIRE CIRCUIT LENGTH.csv  2B35  ELECTRICAL FIXTURE.csv  2B35  LIGHTING DEVICE.csv  2B35  LIGHTING FIXTURE.csv  2B35  WIRE CIRCUIT LENGTH.csv  3B40  ELECTRICAL FIXTURE.csv  3B40  LIGHTING DEVICE.csv  3B40  LIGHTING FIXTURE.csv  3B40  WIRE CIRCUIT LENGTH.csv  ALCOVE  ELECTRICAL FIXTURE.csv  ALCOVE  LIGHTING DEVICE.csv  ALCOVE  LIGHTING FIXTURE.csv  ALCOVE  WIRE CIRCUIT LENGTH.csv  Electrical_Fixtures_Data.xlsx  GENERAL  ELECTRICAL FIXTURE.csv  GENERAL  LIGHTING DEVICE.csv  GENERAL  LIGHTING FIXTURE.csv  GENERAL - ELECTRICAL FIXTURE.csv  GENERAL - LIGHTING DEVICE.csv  GENERAL - LIGHTING FIXTURE.csv  STUDIO  ELECTRICAL FIXTURE.csv  STUDIO  LIGHTING DEVICE.csv  STUDIO  LIGHTING FIXTURE.csv  STUDIO  WIRE CIRCUIT LENGTH.csv  Sample Model RVT2022.xlsx
